收款幂等与并发核销